@@ -115,6 +115,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 2581, bug 6834) Added links to thumbnail in several resolutions to the 
   file description page. The sizes are set by $wgImageLimits.
 * (bug 28031) Add pageCount support to ArchivedFile
+* (bug 27924) PhpHttpRequest doesn't return response body if HTTP != 200
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
